syntax = "proto3";

option csharp_namespace = "ProjectFilesClient";

package ProjectFiles;

service ProjectFiles {
  rpc OpenFolder (OpenFolderRequest) returns (OpenFolderResponse);
}

message OpenFolderRequest {
  string path = 1;
}

message OpenFolderResponse {
  message FileTree {
    string name = 1;
    repeated FileTree files = 2;
    bool isDirectory = 3;
  }
  FileTree projectFiles = 1;
}
